# comfyui

./: .gitignore  README.md  github_ssh  github_ssh.pub  requirements.txt  setup_comfyui.sh  start-service.sh
custom_nodes/cocotools_io/: .gitignore  .tracking  LICENSE  README.md  THIRD_PARTY_NOTICES.md  __init__.py  pyproject.toml  requirements.txt
custom_nodes/cocotools_io/js/: index.js  load_exr_layer_by_name.js  saver.js
custom_nodes/cocotools_io/modules/: colorspace.py  image_loader.py  load_exr.py  load_exr_layer_by_name.py  load_exr_sequence.py  saver.py  znormalize.py
custom_nodes/cocotools_io/utils/: batch_utils.py  debug_utils.py  exr_utils.py  preview_utils.py  sequence_utils.py
custom_nodes/cocotools_io/workflows/: coco_load_exr_layers.json  cocotools_Load_EXR_Sequences.json
custom_nodes/comfyui-animatediff-evolved/: .tracking
custom_nodes/comfyui-depthanythingv2/: .tracking
custom_nodes/comfyui-fluxtrainer/: .tracking  flux_train_network_comfy.py
custom_nodes/comfyui-impact-pack/: __init__.py  pyproject.toml
custom_nodes/comfyui-supir/: .tracking
custom_nodes/diffrhythm_mw/: .tracking  DiffRhythmNode.py  README-CN.md  README.md  __init__.py  infer_utils.py  pyproject.toml  requirements.txt
custom_nodes/diffrhythm_mw/diffrhythm/LangSegment/: LangSegment.py  __init__.py
custom_nodes/diffrhythm_mw/diffrhythm/g2p/: g2p_generation.py
custom_nodes/diffrhythm_mw/diffrhythm/g2p/g2p/: __init__.py  cleaners.py  mandarin.py
custom_nodes/diffrhythm_mw/diffrhythm/g2p/utils/: g2p.py
custom_nodes/diffrhythm_mw/diffrhythm/model/: __init__.py  cfm.py  dit.py  modules.py  trainer.py  utils.py
custom_nodes/diffrhythm_mw/diffrhythm/train/: train.py
custom_nodes/diffrhythm_mw/pretrained/: eval.py
custom_nodes/diffrhythm_mw/workflow-examples/: audio-music-gen.json  edit-song.json  text-music-gen.json
custom_nodes/megatts3-mw/: .tracking  README-CN.md  README.md  __init__.py  megatts3node.py  pyproject.toml  requirements.txt
custom_nodes/megatts3-mw/tts/: frontend_function.py
custom_nodes/megatts3-mw/tts/utils/commons/: hparams.py
custom_nodes/megatts3-mw/tts/utils/text_utils/: split_text.py
(+59 files in other folders)
